Remove Cucumber dependencies